Fixed gap and added localstorage

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -552,14 +552,6 @@ video {
   margin: 1rem;
 }
 
-.m-6{
-  margin: 1.5rem;
-}
-
-.m-8{
-  margin: 2rem;
-}
-
 .mx-6{
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -575,9 +567,9 @@ video {
   margin-right: auto;
 }
 
-.my-\[25vh\]{
-  margin-top: 25vh;
-  margin-bottom: 25vh;
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .my-6{
@@ -585,58 +577,21 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.mx-10{
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.my-\[25vh\]{
+  margin-top: 25vh;
+  margin-bottom: 25vh;
 }
 
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.ml-10{
-  margin-left: 2.5rem;
-}
-
-.ml-8{
-  margin-left: 2rem;
-}
-
-.ml-9{
-  margin-left: 2.25rem;
+.ml-7{
+  margin-left: 1.75rem;
 }
 
 .flex{
   display: flex;
 }
 
-.hidden{
-  display: none;
-}
-
-.h-\[50vh\]{
-  height: 50vh;
-}
-
-.h-\[10vh\]{
-  height: 10vh;
-}
-
-.h-\[10\%\]{
-  height: 10%;
-}
-
-.h-\[1\%\]{
-  height: 1%;
-}
-
-.h-\[5\%\]{
-  height: 5%;
-}
-
-.h-\[3\%\]{
-  height: 3%;
+.min-h-\[40vh\]{
+  min-height: 40vh;
 }
 
 .w-\[20\%\]{
@@ -645,26 +600,6 @@ video {
 
 .w-\[80\%\]{
   width: 80%;
-}
-
-.w-\[10vw\]{
-  width: 10vw;
-}
-
-.w-\[10\%\]{
-  width: 10%;
-}
-
-.w-\[1\%\]{
-  width: 1%;
-}
-
-.w-\[5\%\]{
-  width: 5%;
-}
-
-.w-\[3\%\]{
-  width: 3%;
 }
 
 .cursor-pointer{
@@ -679,8 +614,8 @@ video {
   align-items: center;
 }
 
-.gap-6{
-  gap: 1.5rem;
+.gap-4{
+  gap: 1rem;
 }
 
 .rounded-lg{
@@ -691,34 +626,14 @@ video {
   border-radius: 0.75rem;
 }
 
-.bg-indigo-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(199 210 254 / var(--tw-bg-opacity));
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-orange-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
-}
-
-.bg-gray-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
 .bg-gray-200{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.bg-orange-200{
+.bg-indigo-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
+  background-color: rgb(199 210 254 / var(--tw-bg-opacity));
 }
 
 .bg-orange-300{
@@ -726,57 +641,13 @@ video {
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
-.bg-orange-400{
+.bg-white{
   --tw-bg-opacity: 1;
-  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
-}
-
-.bg-\[length\:200px_100px\]{
-  background-size: 200px 100px;
-}
-
-.bg-cover{
-  background-size: cover;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-contain{
   background-size: contain;
-}
-
-.bg-\[length\:20px_100px\]{
-  background-size: 20px 100px;
-}
-
-.bg-\[length\:20px_50px\]{
-  background-size: 20px 50px;
-}
-
-.bg-\[length\:50px_20px\]{
-  background-size: 50px 20px;
-}
-
-.bg-\[length\:50px_40px\]{
-  background-size: 50px 40px;
-}
-
-.bg-\[length\:100px_50px\]{
-  background-size: 100px 50px;
-}
-
-.bg-\[length\:100px_20px\]{
-  background-size: 100px 20px;
-}
-
-.bg-\[length\:70px_20px\]{
-  background-size: 70px 20px;
-}
-
-.bg-\[length\:40px_20px\]{
-  background-size: 40px 20px;
-}
-
-.bg-center{
-  background-position: center;
 }
 
 .bg-right{
@@ -799,6 +670,11 @@ video {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -809,66 +685,13 @@ video {
   line-height: 1.75rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.font-extrabold{
-  font-weight: 800;
-}
-
 .font-semibold{
   font-weight: 600;
-}
-
-.font-bold{
-  font-weight: 700;
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-indigo-200{
-  --tw-text-opacity: 1;
-  color: rgb(199 210 254 / var(--tw-text-opacity));
-}
-
-.text-indigo-700{
-  --tw-text-opacity: 1;
-  color: rgb(67 56 202 / var(--tw-text-opacity));
 }
 
 .text-indigo-900{
   --tw-text-opacity: 1;
   color: rgb(49 46 129 / var(--tw-text-opacity));
-}
-
-.text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-orange-600{
-  --tw-text-opacity: 1;
-  color: rgb(234 88 12 / var(--tw-text-opacity));
-}
-
-.text-indigo-300{
-  --tw-text-opacity: 1;
-  color: rgb(165 180 252 / var(--tw-text-opacity));
-}
-
-.text-indigo-600{
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
-}
-
-.text-indigo-800{
-  --tw-text-opacity: 1;
-  color: rgb(55 48 163 / var(--tw-text-opacity));
 }
 
 .shadow-lg{
@@ -882,20 +705,18 @@ video {
   outline-offset: 2px;
 }
 
-.hover\:opacity-30:hover{
-  opacity: 0.3;
+.before\:bg-uncheck::before{
+  content: var(--tw-content);
+  background-image: url('/img/stop_467153.png');
 }
 
-.hover\:opacity-70:hover{
-  opacity: 0.7;
+.before\:content-none::before{
+  --tw-content: none;
+  content: var(--tw-content);
 }
 
 .hover\:opacity-90:hover{
   opacity: 0.9;
-}
-
-.active\:line-through:active{
-  text-decoration-line: line-through;
 }
 
 @media (min-width: 768px){
